source/tests/errors/undefined_variable_or_function.apex
import os
os.output(xyu)